--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "^14.2.28",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
@@ -29,6 +29,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
