--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -23,6 +24,7 @@
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
     "next": "^14.2.28",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
