--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "browserslist": [
+    "defaults and supports es6-module",
+    "not dead",
+    "not op_mini all"
+  ]
 }
